<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainFragment">

    <data>
        <variable
            name="mainViewModel"
            type="com.vango.rickandmorty.ui.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/characterRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio"/>

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onCheckedChanged="@{(group,checkedId) -> mainViewModel.onStatusChange(group.indexOfChild(group.findViewById(checkedId)))}"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButtonAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/all"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioButtonAlive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alive"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioButtonDead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dead"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioButtonUnknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textSize="12sp" />
        </RadioGroup>

        <ImageButton
            android:id="@+id/favourite"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="13dp"
            android:background="@drawable/outline_star_rate_black_24"
            android:onClick="@{mainViewModel.favouritesOnClick}"
            app:layout_constraintStart_toEndOf="@id/radio"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/splash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/splash"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>