<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="135dp"
    android:gravity="center_horizontal">


    <androidx.cardview.widget.CardView
        android:layout_width="335dp"
        android:layout_height="118dp"
        android:layout_marginTop="6dp"
        android:layout_gravity="center"
        android:padding="5dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/cardViewBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="91dp"
                android:layout_height="91dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rick_and_morty"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/name"
                android:textColor="@color/characterDetailsText"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="78dp"
                android:layout_height="25dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/raleway"
                android:text="@string/male"
                android:textColor="@color/characterDetailsText"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <TextView
                android:id="@+id/status"
                android:layout_width="115dp"
                android:layout_height="25dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/raleway"
                android:text="@string/alive"
                android:textColor="@color/characterDetailsText"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toBottomOf="@id/gender" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/outline_star_rate_black_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>